# Peekbar

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SECURITY.md
docs/: ARCHITECTURE.md  HANDOFF.md  profiler-project-structure.md
docs/dashboard/: Logging_shell_real.pbip  README.md
docs/dashboard/Logging_shell_real.Report/: .platform  definition.pbir
docs/dashboard/Logging_shell_real.Report/StaticResources/RegisteredResources/: LatencyDark.json
docs/dashboard/Logging_shell_real.Report/definition/: report.json
docs/dashboard/Logging_shell_real.Report/definition/pages/: pages.json
docs/dashboard/Logging_shell_real.SemanticModel/: .platform  diagramLayout.json
docs/dashboard/Logging_shell_real.SemanticModel/definition/: model.tmdl  relationships.tmdl
docs/plans/: media-strategy.md  outward-facing-docs.md  profiler.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md
docs/research/: taskbar-chip-feasibility.md  win11-taskbar-geometry.md  win32-edge-cases.md
packaging/: README.txt  config.sample.txt  install.ps1
profiler/: CMakeLists.txt  Contract.h  EtwSession.cpp  EtwSession.h  MetricsView.cpp  MetricsView.h  README.md  main.cpp
src/: ConfigWatcher.cpp  ConfigWatcher.h  DockWindow.cpp  DockWindow.h  FanPopup.cpp  FanPopup.h  HostWindow.cpp  HostWindow.h  Launcher.cpp  Launcher.h  PaintUtil.cpp  PaintUtil.h  Renderer.cpp  Renderer.h  Store.cpp  Store.h  TabReader.cpp  TabReader.h  TaskbarOverlayWindow.cpp  TaskbarOverlayWindow.h  Trace.cpp  Trace.h  WindowMonitor.h  main.cpp
(+31 files in other folders)
